# Brainfuck

./: .gitignore  CMakeLists.txt  _bf.cpp  bf.cpp  bf.py  brainfuck.py  brainfuck.pyi  setup.py
.github/workflows/: build.yml
bf/: divide.bf  less_than.bf  mod.bf  multiply.bf  prime.bf  print_num.bf  put_int.bf  put_lower.bf  read_num.bf
bf/get/: int.bf
bf/put/: bool.bf  newline.bf  space.bf  upper.bf
bf_old/: divide.bf  e.bf  hello.bf  less_than.bf  mod.bf  prime.bf  print_int.bf
include/: common.h  instream.h  interpreter.h  loader.h  utils.h
src/: global.h  instream.cpp  instream.h  interpreter.cpp  interpreter.h  loader.cpp  loader.h  main.cpp  utils.cpp
